; ModuleID = '/home/carl/AnghaBench/linux/arch/um/drivers/extr_umcast_user.c_umcast_remove.c'
source_filename = "/home/carl/AnghaBench/linux/arch/um/drivers/extr_umcast_user.c_umcast_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.umcast_data = type { i32*, i32*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @umcast_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @umcast_remove(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.umcast_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.umcast_data*
  store %struct.umcast_data* %5, %struct.umcast_data** %3, align 8
  %6 = load %struct.umcast_data*, %struct.umcast_data** %3, align 8
  %7 = getelementptr inbounds %struct.umcast_data, %struct.umcast_data* %6, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  %9 = call i32 @kfree(i32* %8)
  %10 = load %struct.umcast_data*, %struct.umcast_data** %3, align 8
  %11 = getelementptr inbounds %struct.umcast_data, %struct.umcast_data* %10, i32 0, i32 2
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %1
  %15 = load %struct.umcast_data*, %struct.umcast_data** %3, align 8
  %16 = getelementptr inbounds %struct.umcast_data, %struct.umcast_data* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @kfree(i32* %17)
  br label %19

19:                                               ; preds = %14, %1
  %20 = load %struct.umcast_data*, %struct.umcast_data** %3, align 8
  %21 = getelementptr inbounds %struct.umcast_data, %struct.umcast_data* %20, i32 0, i32 0
  store i32* null, i32** %21, align 8
  %22 = load %struct.umcast_data*, %struct.umcast_data** %3, align 8
  %23 = getelementptr inbounds %struct.umcast_data, %struct.umcast_data* %22, i32 0, i32 1
  store i32* null, i32** %23, align 8
  ret void
}

declare dso_local i32 @kfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
